Fixed the gradle not building the jar